fix figure width on mobile

--- a/chat-app-css-illustration-main/styles/style.css
+++ b/chat-app-css-illustration-main/styles/style.css
@@ -64,6 +64,7 @@ body::after {
 }
 
 figure {
+    width: fit-content !important;
     border: 10px solid white;
     border-radius: 24px;
     padding: 0.5rem;
